[package]
name = "aleo-mining-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.20"
anyhow = "1"
url = "2"
env_logger = "0.10.0"
log = "0.4"
futures-util = "0.3"

[dependencies]
snarkvm-ledger-coinbase = "0.14.6"
snarkvm-console-network = "0.14.6"
snarkvm-console-types-address = "0.14.6"
snarkvm-utilities = "0.14.6"
snarkvm-algorithms = {version = "0.14.6", features = ["polycommit"]}

serde_json = "1"
serde = {version = "1", features = ["derive"] }
rand = "0.8"