[package]
name = "aleo-mining-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.20"
anyhow = "1"
url = "2"
env_logger = "0.10.0"
log = "0.4"
futures-util = "0.3"
rand = "0.8"

[dependencies]
snarkvm = {version = "0.16.8", features = ["console", "ledger", "utilities", "algorithms"]}
serde_json = "1"
serde = {version = "1", features = ["derive"] }

anyhow = "1"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.20"
futures-util = { version = "0.3.28"}
