[package]
name = "aleo-mining-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.20"
anyhow = "1"
url = "2"
env_logger = "0.10.0"
log = "0.4"
futures-util = "0.3"
rand = "0.8"

[dependencies]
snarkvm = {version = "0.16.8", features = ["console", "ledger", "utilities", "algorithms"]}
serde_json = "1"
serde = {version = "1", features = ["derive"] }

anyhow = {version = "1", optional = true}
tokio = {version = "1", features = ["full"], optional = true}
tokio-tungstenite = {version = "0.20", optional = true}
futures-util = { version = "0.3.28", optional =  true}

[features]
client = ["anyhow", "tokio", "tokio-tungstenite", "futures-util"]
